@@ -1,3 +1,8 @@
+2014-06-11  Rene Liebscher <R.Liebscher@gmx.de>
+
+	bug #42516 spelling-error-in-binary
+	* stk500v2.c, avrftdi.c, usbasp.c: fixed spelling errors
+
 2014-06-01  Rene Liebscher <R.Liebscher@gmx.de>
 
 	bug #42337 avrdude.conf updates for UM232H/CM232H
